1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (SRC): Add memcpy.c, memchr.c, strncmp.c, strchr.c,
	and strpbrk.c.
	(noinst_HEADERS): Add mem.h.

	* strndup.c: Don't include stdio.h or sys/types.h.

	* misc.h: Add declaration of memcpy, memchr, strpbrk, strncmp, and
	strlen.
	(__ptr_t): Make it a macro instead of a typedef.

	* memset.c: Include mem.h instead of having local defines.

	* memcpy.c, memchr.c, strlen.c: New files.

	* mem.h: New file (defines common to memset.c and memcpy.c).

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* argp-fmtstream.c, argp-help.c, argp-parse.c, getopt.c: Include
	misc.h after standard includes.

	* argp-help.c, argp-parse.c: Constify vt and short_index (return
	of strchr).

	* misc.h: Declare strchr, strcmp, and memset.

	* Makefile.am (lib_LIBRARIES, libmisc_a_SOURCES): Remove.
	(noinst_HEADERS): Include argp-fmtstream.h and argp-namefrob.h.
	(SRC): Add strcmp.c, strchr.c, and memset.c.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libmisc_la_SOURCES,
	libmisc_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New variables.
	Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-04-27  Alex Lancaster  <alex@santafe.edu>

	* getopt.c: Don't elide getopt code.

1998-04-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* getopt1.c: Don't redefine getopt and optarg around stdio.h.

	* getopt.h (opterr, optind, optarg, optopt): Prefix with "misc_"
	to avoid linker warnings vs. libc versions.

1998-03-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* find_executable.c (maybe_executable): Add fd argument
	for executable read from /proc/PID/exe.  Check it against
	the path's inode.
	(find_executable): Don't return the /proc path after open.

1998-03-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
