@@ -1,3 +1,7 @@
+1998-07-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* find_executable.c, realpath.c: Include misc.h last.
+
 1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.am (SRC): Add memcpy.c, memchr.c, strncmp.c, strchr.c,
